добавил страницу статусы crm
статусы crm немного заполнил
обновил ссылки на остальных страницах

--- a/crm_status.html
+++ b/crm_status.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Смена ГД после открытия счета</title>
+		<title>Статусы CRM</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<link href="css/bootstrap.css" rel="stylesheet">
@@ -27,24 +27,39 @@
 			<nav>
 				<ul class="nav">
 					<li><a href="index.html"><h1>СОПы</h1></a></li>
-					<li class="active"><a href="smena_gd_after_opening.html">Смена ГД после открытия счета</a></li>
+					<li><a href="smena_gd_after_opening.html">Смена ГД после открытия счета</a></li>
  					<li><a href="smena_pasporta.html">Смена паспорта</a></li>
  					<li><a href="cft_ip.html">Заполнить карточку клиента в ЦФТ (ИП)</a></li>
- 					<li><a href="crm_status.html">Статусы CRM</a></li>
+ 					<li class="active"><a href="crm_status.html">Статусы CRM</a></li>
  				</ul>
 			</nav>
 
 			</aside>
 			<section class="sprava">
 				<div class="content">
-					<h1 class="centr">Смена ГД после открытия счета</h1>
-					<p class="centr"><img src="img/deer.gif"></p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita perspiciatis suscipit autem, ullam molestiae voluptatem mollitia sunt. Quam exercitationem voluptatibus dolore quaerat eveniet voluptatum! Vero, voluptatum aliquid fugiat tempora nesciunt?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis corporis expedita distinctio eaque, dignissimos ab! Repellendus, consequatur sint perferendis laudantium.
-					</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita perspiciatis suscipit autem, ullam molestiae voluptatem mollitia sunt. Quam exercitationem voluptatibus dolore quaerat eveniet voluptatum! Vero, voluptatum aliquid fugiat tempora nesciunt?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis corporis expedita distinctio eaque, dignissimos ab! Repellendus, consequatur sint perferendis laudantium.
-					</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita perspiciatis suscipit autem, ullam molestiae voluptatem mollitia sunt. Quam exercitationem voluptatibus dolore quaerat eveniet voluptatum! Vero, voluptatum aliquid fugiat tempora nesciunt?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis corporis expedita distinctio eaque, dignissimos ab! Repellendus, consequatur sint perferendis laudantium.
-					</p>
+					<h1 class="centr">Статусы CRM</h1>
+					<dl>
+ 						<dt>Ожидание ЕГРЮЛ/ЕГРИП</dt>
+  						<dd>У организации такой статус, когда:</dd>
+  						<ul>
+  						<li>перевели на ручной процесс</li>
+ 						<li>отправили на повторную загрузку</li>
+ 						<li>при кривой регистрации?</li>
+					</ul>
+
+					<dt>Обработка ЕГРЮЛ/ЕГРИП</dt>
+  					<dd>Карточка ЮЛ этой организации заполняется в приложении обработки документов.</dd>
+
+  					<dt>Проверка юр. лица</dt>
+  					<dd>Карточка юр. лица заполнена и отправлена на проверку ФБР. Проверяется около 5-10 минут.</dd>
+
+					</dl>
+					<strong>Ожидание документов от клиента</strong>
+					<p>На этом статусе клиент (а также клиентский менеджер или ввод данных) загружает документы в карточку представителя.</p>
+					<strong>После загрузки документов необходимо зайти в представление "Организация" и переключить свойство "Документы собраны" с нет на да, сохранить.</strong>
+
+
+				
 				</div>
 				
 			</section>
