--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 					<li><a href="smena_gd_after_opening.html">Смена ГД после открытия счета</a></li>
  					<li><a href="smena_pasporta.html">Смена паспорта</a></li>
  					<li><a href="cft_ip.html">Заполнить карточку клиента в ЦФТ (ИП)</a></li>
+ 					<li><a href="crm_status.html">Статусы CRM</a></li>
  				</ul>
 			</nav>
 
