--- a/crm_status.html
+++ b/crm_status.html
@@ -23,7 +23,8 @@
 		<div class="heading"></div>
 		
 		<div class="row">
-			<aside class="sleva">		
+  			<div class="span4">
+  			<div class="sleva">		
 			<nav>
 				<ul class="nav">
 					<li><a href="index.html"><h1>СОПы</h1></a></li>
@@ -33,9 +34,10 @@
  					<li class="active"><a href="crm_status.html">Статусы CRM</a></li>
  				</ul>
 			</nav>
-
-			</aside>
-			<section class="sprava">
+			</div>
+		</div>
+  			<div class="span8">
+  				<div class="sprava">
 				<div class="content">
 					<h1 class="centr">Статусы CRM</h1>
 					<dl>
@@ -62,7 +64,13 @@
 				
 				</div>
 				
-			</section>
+			</div>
+  			</div>
+		</div>
+
+		<div class="row">
+			
+			
 		</div>
 
 
