--- a/smena_pasporta.html
+++ b/smena_pasporta.html
@@ -23,7 +23,8 @@
 		<div class="heading"></div>
 		
 		<div class="row">
-			<aside class="sleva">		
+  			<div class="span4">
+  			<div class="sleva">		
 			<nav>
 				<ul class="nav">
 					<li><a href="index.html"><h1>СОПы</h1></a></li>
@@ -33,21 +34,28 @@
  					<li><a href="crm_status.html">Статусы CRM</a></li>
  				</ul>
 			</nav>
-
-			</aside>
-			<section class="sprava">
+			</div>
+		</div>
+  			<div class="span8">
+  				<div class="sprava">
 				<div class="content">
 					<h1 class="centr">Смена паспорта</h1>
-					<p class="centr"><img src="img/deer2.gif"></p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita perspiciatis suscipit autem, ullam molestiae voluptatem mollitia sunt. Quam exercitationem voluptatibus dolore quaerat eveniet voluptatum! Vero, voluptatum aliquid fugiat tempora nesciunt?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis corporis expedita distinctio eaque, dignissimos ab! Repellendus, consequatur sint perferendis laudantium.
+					</p>
+					<p class="centr"><img src="img/deer2.gif" height="200 px"></p>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita perspiciatis suscipit autem, ullam molestiae voluptatem mollitia sunt. Quam exercitationem voluptatibus dolore quaerat eveniet voluptatum! Vero, voluptatum aliquid fugiat tempora nesciunt?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis corporis expedita distinctio eaque, dignissimos ab! Repellendus, consequatur sint perferendis laudantium.
 					</p>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita perspiciatis suscipit autem, ullam molestiae voluptatem mollitia sunt. Quam exercitationem voluptatibus dolore quaerat eveniet voluptatum! Vero, voluptatum aliquid fugiat tempora nesciunt?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis corporis expedita distinctio eaque, dignissimos ab! Repellendus, consequatur sint perferendis laudantium.
-					</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita perspiciatis suscipit autem, ullam molestiae voluptatem mollitia sunt. Quam exercitationem voluptatibus dolore quaerat eveniet voluptatum! Vero, voluptatum aliquid fugiat tempora nesciunt?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis corporis expedita distinctio eaque, dignissimos ab! Repellendus, consequatur sint perferendis laudantium.
-					</p>
+					</p>	
 				</div>
 				
-			</section>
+			</div>
+  			</div>
+		</div>
+
+		<div class="row">
+			
+			
 		</div>
 
 
